# bearpaw

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_TAURI.md  SECURITY.md  latest.json.example  package.json  synchronous-munching-flute.md
.cursor/skills/bearpaw-codebase/: SKILL.md
.github/: dependabot.yml
.github/workflows/: build.yml  claude-code-review.yml  codeql.yml  tests.yml
.husky/: pre-commit
backend/src/bearpaw/: api.py  main.py  preferences.py  scheduler.py  state.py  websocket.py
backend/tests/: helpers.py  test_api.py  test_state_store.py
crates/bearpaw-api/: Cargo.toml  config.example.yaml  scanner.db
crates/bearpaw-api/examples/: cin_write_probe.rs  glf_walk_probe.rs  lockout_keybeep_probe.rs  lockout_realchannel_probe.rs  priority_clear_probe.rs  wire_capture.rs
crates/bearpaw-api/src/: config.rs  lib.rs  logging.rs  main.rs  scheduler.rs  state.rs  transport.rs  transport_usb.rs
crates/bearpaw-api/src/api/: control.rs  memory_sync.rs  mod.rs  poll.rs  program_mode.rs  security.rs  ws.rs
crates/bearpaw-api/src/api/handlers/: analytics.rs  banks.rs  commands.rs  debug.rs  exports.rs  import_ss.rs  lockouts.rs  memory.rs  mod.rs  preferences.rs  settings.rs  status.rs
crates/bearpaw-api/src/protocol/: defaults.rs  mod.rs  tones.rs
docs/: API_SPEC.md  APP_VIEWS.md  BACKEND_LOGGING.md  BACKEND_SPEC.md  BACKEND_TODO.md  BC125AT_PROTOCOL.md  BUG_AUDIT_2026-07-02.md  DATA_LIFECYCLE.md  DRIVER_EXTENSION_GUIDE.md  FRONTEND_SPEC.md  FRONTEND_TODO.md  IDEAS.md  PROTOCOL_AUDIT_PLAN.md  README.md  RUST_BACKEND_PLAN.md  SCANNER_PROTOCOL_REFERENCE.md  TAURI_INTEGRATION.md  TESTING_STRATEGY.md  THREE_MODE_ARCHITECTURE.md  UI_WORKFLOW.md  USB_PERMISSIONS.md  USB_PERMISSIONS_SETUP.md  WEBSOCKET_SCHEMA.md  compass_artifact_wf-4d260a13-b490-4b4e-830c-010c039981ab_text_markdown.md  figma-make-prompt.md  first_order_design_manifesto.md  first_order_mapping_sdr_scanner_sstv.md  openapi.json  postman_environment.json  scan-view-handoff-log.md
docs/archive/: BACKEND_SPEC.md  BACKEND_TODO.md  INTEGRATION_TODO.md  ROADMAP.md
docs/fixtures/: kf0nui.bc125at_ss
docs/guide/: channels.md  device.md  getting-started.md  glossary.md  scan.md  troubleshooting.md
docs/superpowers/plans/: 2026-07-08-live-tone-display.md  2026-07-21-priority-channel-per-bank.md  2026-07-21-ss-config-import.md  2026-07-22-lockout-dropdown.md
docs/superpowers/specs/: 2026-07-08-live-tone-display-design.md  2026-07-21-import-progress-overlay-design.md  2026-07-21-priority-channel-per-bank-design.md  2026-07-21-ss-config-import-design.md  2026-07-22-lockout-dropdown-design.md
docs/wire_captures/2026-05-21/: audit-reconciliation.md  raw.txt
docs/wire_captures/2026-05-22/: idle-status.json
docs/wire_captures/2026-07-08/: cin-write-order-probe.txt  direct-tune-probe.txt  glf-walk-probe.txt
frontend/: .prettierignore  ATTRIBUTIONS.md  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: basic-workflow.spec.ts
frontend/scripts/: smoke-e2e.mjs
frontend/src/: App.css  App.tsx  index.css  main.tsx  tauri-shell.ts  types.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  analytics.db  scanner.db  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/logs/: bearpaw-desktop-backend.log.2026-02-26
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts  useApi.ts
frontend/src/api/__tests__/: client.test.ts  contract.test.ts
frontend/src/app/: App.tsx
frontend/src/app/__tests__/: App.regression.test.tsx  App.test.tsx  formatLiveTone.test.ts
frontend/src/app/components/: BearpawProgress.tsx  FitText.tsx  ImportProgressOverlay.tsx  ScanAnnouncer.tsx  ScannerUI.tsx  SyncSpinner.tsx  TabBar.tsx
frontend/src/components/: ActivityLog.tsx  ConfigModeView.tsx  ConnectionStatus.tsx  CurrentBankView.tsx  DirectTuneModal.tsx  MemoryBrowserPanel.tsx  MemoryBrowserView.tsx  NotificationCenter.tsx  PrimaryControls.tsx  ShortcutsHelp.tsx  SignalStrength.tsx  VirtualDisplay.tsx  VolumeIndicator.tsx
frontend/src/components/config/: AudioCategory.tsx  CategoryNav.tsx  CloseCallCategory.tsx  CustomSearchCategory.tsx  DeviceConfigCategory.tsx  DeviceStatusHeader.tsx  DisplayCategory.tsx  LockedChannelsCategory.tsx  PowerKeysCategory.tsx  PriorityWeatherCategory.tsx  SearchCategory.tsx  types.ts  (+1 more)
frontend/src/hooks/: useActivityLogHydrate.ts  useActivityLogTracker.ts  useConnectionStatus.ts  useDashboardAnalytics.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useNotifications.ts  useShellStatusText.ts
frontend/src/icons/: fontAwesome.ts
frontend/src/imports/: ScanHit.tsx  SocketError.tsx  UsbError.tsx  svg-10gl6kikm0.ts  svg-4af8p5er03.ts  svg-govmzsdb93.ts
frontend/src/store/: useStore.ts
frontend/src/styles/: fonts.css  index.css  theme.css
frontend/src/test/: setup.ts
frontend/src/utils/: channelNavigation.ts  timeFormat.ts
frontend/src/websocket/: ScannerWebSocket.ts  useWebSocket.ts  useWebSocket.tsx
scripts/: build-all.ps1  build-all.sh  dev.ps1  dev.sh  verify_backend_parity.py
site/: CNAME  app.js  index.html  style.css
site/docs/: channels.html  close-call.html  custom-search.html  device-config.html  device.html  docs.css  getting-started.html  glossary.html  index.html  locked-channels.html  preferences.html  scan.html  service-search.html  troubleshooting.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  recording.rs
src-tauri/src/commands/: mod.rs  recording.rs  sidecar.rs
src-tauri/src/config/: mod.rs  paths.rs
src-tauri/src/recording/: buffer.rs  capture.rs  encoder.rs  mod.rs  state.rs
src-tauri/src/sidecar/: health.rs  manager.rs  mod.rs
(+54 files in other folders)
