[package]
name = "bearpaw-api"
version = "0.1.0"
edition = "2021"
description = "Bearpaw backend API: serial/USB transport, scanner protocol, REST + WebSocket"
authors = ["Bearpaw"]

[lib]
name = "bearpaw_api"
path = "src/lib.rs"

[[bin]]
name = "bearpaw"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serialport = "4"
rusb = "0.9"
thiserror = "1"
anyhow = "1"
csv = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
tower = "0.5"
