[package]
name = "bearpaw-desktop"
version = "1.1.0"
description = "Bearpaw Desktop"
authors = ["Jeremy Fuksa"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bearpaw-api = { path = "../../crates/bearpaw-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
